--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
             <button onclick="agregarTarea()">Agregar</button>
         </div>
         <div class="summary">
-            <p>Total: <span id="total-tareas">0</span></p>
-            <p>Realizadas: <span id="tareas-completadas">0</span></p>
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Tarea</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody id="task-list"></tbody>
-        </table>
+            <div class="numero-tareas">
+                <p>Total: <span id="total-tareas">0</span></p>
+                <p>Realizadas: <span id="tareas-completadas">0</span></p>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Tarea</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="task-list"></tbody>
+            </table>
         </div>
     </div>
     <script src="./assets/js/script.js"></script>
